[tool.poetry]
name = "diss"
version = "0.1.0"
description = "Demonstration Informed Specification Search"
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^20.0"
dfa-identify = "^0.1.1"
dfa = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-flake8 = "^1.0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
